--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,20 +1,13 @@
-<html>
-    <head>
-        <title>Django Blog</title>
-    </head>
-    <body>
-        <div>
-            <h1><a href="/">Justin's Django Blog</a></h1>
-        </div>
+{% extends 'blog/base.html' %}
 
-        <div>
-            {% for post in posts %}
-              <div>
-                <h2><a href="">{{ post.title }}</a></h2>
-                <p>published: {{ post.published_date }}</p>
-                <p>{{ post.text|linebreaksbr }}</p>
-              </div>
-            {% endfor %}
-        </div>
-    </body>
-</html>
+{% block content %}
+  {% for post in posts %}
+      <div class="post">
+          <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
+          <div class="date">
+              <p>published: {{ post.published_date }}</p>
+          </div>
+          <p>{{ post.text|linebreaksbr }}</p>
+      </div>
+  {% endfor %}
+{% endblock %}
