--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -2,14 +2,19 @@
 
 {% block content %}
   <div class="post">
+    <h2>{{ post.title }}</h2>
+    {% if user.is_authenticated %}
+      <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+      <a class="btn btn-defaul" href="{% url 'post_delete' pk=post.pk %}" onclick="return confirm('Are you sure you want to delete this post?')">
+        <span class="glyphicon glyphicon-trash"></span>
+      </a>
+    {% endif %}
     {% if post.published_date %}
       <div class="date">
         {{ post.published_date }}
       </div>
-    {% endif %}
-    <h2>{{ post.title }}</h2>
-    {% if user.is_authenticated %}
-      <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+    {% elif user.is_authenticated %}
+      <a class="btn btn-default" href="{% url 'post_publish' pk=post.pk %}">Publish</a>
     {% endif %}
     <p>{{ post.text|linebreaksbr }}</p>
   </div>
